# libmat

./: .gitignore  .gitmodules  CMakeLists-windows.txt  CMakeLists.txt  CMakeLists_cxx.txt  README.md
.github/workflows/: macos.yml
cmake/: geogram.cmake  rpdDependencies.cmake  rpdDownloadExternal.cmake
data/: joint.tet  joint_1.xyz
data/blender/cube/: cube.ply  cube.ply_.csv  cube.ply_.msh  cube.ply__sf.geogram  cube.ply__tracked_surface.stl  cube.xyz  cube_s14.xyz  cube_s15.xyz
data/blender/torus/: model_torus_1.msh  model_torus_1.xyz  model_torus_1_sf.geogram
data/blender/u_shape/: u_shape.ply  u_shape.ply_.csv  u_shape.ply_.msh  u_shape.ply__tracked_surface.stl  u_shape_2.ply  u_shape_2.ply_.csv  u_shape_2.ply_.msh  u_shape_2.ply__tracked_surface.stl  u_shape_2.xyz  u_shape_2_2cc.xyz
data/handmade/: cube.xyz  cube_12.tet  cube_12_sf.geogram  cube_2.tet  cube_4.tet  cube_5.tet  cube_6.tet  tetra.xyz  tetra1.tet  tetra2.tet  tetra3.tet
data/matfp/: bottom.stl  bottom.stl_.bgeo  bottom.stl_.csv  bottom.stl_.msh  bottom.stl__sf.geogram  bottom.stl__tracked_surface.stl  bottom.xyz  bottom_1.xyz  bottom_sphere.xyz  fandisk.obj_.msh  fandisk.obj__pts.xyz  fandisk.obj__sf.geogram
data/matfp/models/: 00000020_ad34a3f60c4a4caa99646600_trimesh_000.obj_.csv  00000020_ad34a3f60c4a4caa99646600_trimesh_000.obj_.msh  00000020_ad34a3f60c4a4caa99646600_trimesh_000.obj__tracked_surface.stl  00000068_767e4372b5f94a88a7a17d90_trimesh_009.obj_.csv  00000068_767e4372b5f94a88a7a17d90_trimesh_009.obj_.msh  00000068_767e4372b5f94a88a7a17d90_trimesh_009.obj__tracked_surface.stl  00000077_767e4372b5f94a88a7a17d90_trimesh_018.obj_.csv  00000077_767e4372b5f94a88a7a17d90_trimesh_018.obj_.msh  00000077_767e4372b5f94a88a7a17d90_trimesh_018.obj__tracked_surface.stl  00000125_e18c7feacfb54f3880659b43_trimesh_000.obj_.csv  00000125_e18c7feacfb54f3880659b43_trimesh_000.obj_.msh  00000125_e18c7feacfb54f3880659b43_trimesh_000.obj__tracked_surface.stl  00000128_e18c7feacfb54f3880659b43_trimesh_003.obj_.csv  00000128_e18c7feacfb54f3880659b43_trimesh_003.obj_.msh  00000128_e18c7feacfb54f3880659b43_trimesh_003.obj__tracked_surface.stl  00000168_bfdc19149a8b4e72b3d0f5c5_trimesh_000.obj_.csv  00000168_bfdc19149a8b4e72b3d0f5c5_trimesh_000.obj_.msh  00000168_bfdc19149a8b4e72b3d0f5c5_trimesh_000.obj__tracked_surface.stl  00000272_648a7c23a21f4e88bf25ffeb_trimesh_000.obj_.csv  00000272_648a7c23a21f4e88bf25ffeb_trimesh_000.obj_.msh  00000272_648a7c23a21f4e88bf25ffeb_trimesh_000.obj__tracked_surface.stl  00000329_12a935cd9b684f879c0505fe_trimesh_000.obj_.csv  00000329_12a935cd9b684f879c0505fe_trimesh_000.obj_.msh  00000329_12a935cd9b684f879c0505fe_trimesh_000.obj__tracked_surface.stl  00000801_ad6107d9fc994ccca38cc4e4_trimesh_003.obj_.csv  00000801_ad6107d9fc994ccca38cc4e4_trimesh_003.obj_.msh  00000801_ad6107d9fc994ccca38cc4e4_trimesh_003.obj__tracked_surface.stl  00000802_ad6107d9fc994ccca38cc4e4_trimesh_004.obj_.csv  00000802_ad6107d9fc994ccca38cc4e4_trimesh_004.obj_.msh  00000802_ad6107d9fc994ccca38cc4e4_trimesh_004.obj__tracked_surface.stl  00001029_cde47df6e28543d1b434f206_trimesh_001.obj_.csv  00001029_cde47df6e28543d1b434f206_trimesh_001.obj_.msh  00001029_cde47df6e28543d1b434f206_trimesh_001.obj__tracked_surface.stl  fandisk.obj_.csv  fandisk.obj_.msh  fandisk.obj__tracked_surface.stl  run_ftetwild.sh
data/pipeline/: boxe_circle_2.ply  boxe_circle_2.ply_.csv  boxe_circle_2.ply_.msh  boxe_circle_2.ply__sf.geogram  boxe_circle_2.ply__tracked_surface.stl
data/pipeline2/: boxe_circle_1.ply  boxe_circle_1.ply_.csv  boxe_circle_1.ply_.msh  boxe_circle_1.ply__extf.ma  boxe_circle_1.ply__sf.geogram  boxe_circle_1.ply__tracked_surface.stl
include/: common.h  common_cuda.h  common_cxx.h  common_geogram.h  cuda_helper_math.h  cuda_utils.h
script/: .polyscope.ini  bash_remove_unwanted_files.sh  convert_msh2tet.py  debug.txt  imgui.ini  run_ftetwild.py  run_ftetwild_folder.py  run_mattopo_batch.py
src/: main.cpp  main_gui.cpp  main_gui.h  test_gui.cpp
src/CPU/: CMakeLists.txt  Delaunay_psm.cpp  Delaunay_psm.h  README.md  convex_cell.cpp  convex_cell.h  voronoi_fallback.cpp  voronoi_fallback.h  voronoi_fallback_old.cpp  voronoi_fallback_old.h
src/IO/: CMakeLists.txt  Predicates.cxx  io.cxx  io.h
src/IO/IO_CUDA/: CMakeLists.txt  io_cuda.cxx  io_cuda.h  io_utils.cpp  io_utils.hpp
src/IO/IO_CXX/: CMakeLists.txt  Predicates.hpp  io.cxx  io.h
src/cxx_test/: CMakeLists_cxx.txt  main_gui_cxx.cxx  main_gui_cxx.h  main_voronoi.cxx
src/dist2mat/: CMakeLists.txt  dist2mat.cu  dist2mat.h  dist2mat_cuda_utils.h
src/inputs/: CGAL_poly.h  CMakeLists.txt  input_types.cxx  input_types.h  mesh_AABB.cxx  mesh_AABB.h  params.h  sharp_feature_detection.cxx  sharp_feature_detection.h
src/matbase/: CMakeLists.txt  medial_mesh.cxx  medial_mesh.h  medial_primitives.cxx  medial_primitives.h  medial_sphere.cxx  medial_sphere.h
src/matfun/: CMakeLists.txt  shrinking.cxx  shrinking.h  thinning.cxx  thinning.h  updating.cxx  updating.h
src/matfun_fix/: CMakeLists.txt  fix_common.cxx  fix_common.h  fix_extf.cxx  fix_extf.h  fix_geo.cxx  fix_geo.h  fix_geo_error.cxx  fix_geo_error.h  fix_intf.cxx  fix_intf.h  fix_topo.cxx  fix_topo.h
src/predicate_generator/: main.cpp
src/predicate_generator/CGALmini/: FPU.h  Static_filter_error.h
src/rpd3d/: CMakeLists.txt  convex_cell.cu  convex_cell.h  stopwatch.h  voronoi.cu  voronoi.h  voronoi_common.h  voronoi_defs.cxx
src/rpd3d/kNN-CUDA/: CMakeLists.txt  knncuda.cu  knncuda.h
src/rpd3d_api/: CMakeLists.txt  rpd_api.cxx  rpd_api.h  rpd_update.cxx  triangulation.cxx  triangulation.h
src/rpd3d_base/: CMakeLists.txt  rpd_update.cxx  rpd_update.h  triangulation.cxx  triangulation.h  voronoi_common.h  voronoi_defs.h
tests_cxx/: CMakeLists.txt  main_cxx.cxx  main_gui_cxx.cxx  main_gui_cxx.h
